# raglens

./: .gitignore  Cargo.toml  README.md  RELEASE_CHECKLIST.md  pyproject.toml  rag-audit.toml.example
.github/workflows/: ci.yml  release.yml
artifacts/: README.md
examples/: queries.txt  queries_structured.txt  rag-audit.toml
examples/docs/: billing.md  faq.md  pricing.md  refund_old.md  refund_policy.md  returns.md  shipping.md  support.md
inputs/: README.md  public_urls.txt  queries.txt  queries_structured.txt  rag-audit.toml
inputs/docs/: billing.md  faq.md  refund_old.md  refund_policy.md  shipping.md
inputs/docs_web/: docs.github.com_en_get-started_quickstart_hello-world.txt  docs.github.com_en_get-started_start-your-journey_about-github-and-git.txt  www.nist.gov_cyberframework.txt  www.nist.gov_privacy-policy.txt  www.rfc-editor.org_rfc_rfc7231.txt  www.rfc-editor.org_rfc_rfc9110.txt  www.usa.gov_benefit-finder.txt  www.usa.gov_consumer-complaints.txt
inputs/examples/answer_audit/: README.md  sales.csv  sales_risky.csv  sales_supported.csv
inputs/examples/ecommerce/: README.md  queries.txt  queries_structured.txt  rag-audit.toml
inputs/examples/ecommerce/docs/: billing_disputes.md  faq.md  marketplace_seller_policy.md  refund_policy_current.md  refund_policy_legacy.md  returns_policy.md  shipping_policy.md  subscription_cancellations.md  support_channels.md  warranty.md
inputs/examples/eval/: README.md  rules_robocall.yaml
inputs/examples/run_diff/: README.md  revenue_run_a.json  revenue_run_b_contradictory.json  revenue_run_b_more_specific.json  robocall_run_a.json  robocall_run_b.json  robocall_run_b_alt_answer.json  robocall_run_b_equivalent.json  robocall_run_b_same_answer.json  robocall_run_b_score_shift.json
scripts/: import-web-docs.sh  run-audit.sh
src/: answer_audit.rs  chunker.rs  cli.rs  compare_runs.rs  config.rs  diagnostics.rs  embeddings.rs  eval.rs  lib.rs  loader.rs  main.rs  mcp_import.rs  model.rs  normalize.rs  report.rs  retrieval.rs  run_diff.rs
tests/: integration.rs
tests/fixtures/: queries.yaml
tests/fixtures/docs/: faq.md  refund.md  shipping.md
tests/fixtures/eval/: rules.yaml
tests/fixtures/eval/runs/: late_refund_case.json  refund_policy_case.json
tests/fixtures/mcp/: trace_basic.json  trace_custom.json
