[package]
name = "rag-audit"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "RAG retrieval readiness diagnostics CLI"
repository = "https://github.com/placeholder/rag-audit"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
walkdir = "2.5"
rayon = "1.10"
thiserror = "1.0"
humantime = "2.1"
indexmap = { version = "2.2", features = ["serde"] }
indicatif = "0.17"
regex = "1.10"
toml = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "blocking"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
