[package]
name = "rag-audit"
version = "0.1.1"
edition = "2021"
default-run = "raglens"
license = "MIT"
description = "RAGLens CLI for debugging retrieval behavior in RAG systems"
readme = "README.md"
repository = "https://github.com/kraftaa/raglens"
homepage = "https://github.com/kraftaa/raglens"
documentation = "https://docs.rs/rag-audit"
keywords = ["rag", "retrieval", "diagnostics", "cli", "audit"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "raglens"
path = "src/bin/raglens.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
walkdir = "2.5"
indexmap = { version = "2.2", features = ["serde"] }
regex = "1.10"
toml = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "blocking"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
