[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "raglens-cli"
version = "0.1.2"
description = "RAGLens CLI for debugging retrieval behavior in RAG systems"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "RAGLens Contributors" }
]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Scientific/Engineering :: Information Analysis"
]

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
strip = true

[project.urls]
Homepage = "https://github.com/kraftaa/raglens"
Repository = "https://github.com/kraftaa/raglens"
